<resources>
    <string name="app_name">Beergame</string>
    <string name="play">Play</string>
    <string name="instructions">Instructions</string>
    <string name="customize">Customize</string>
    <string name="newCard">Draw Card</string>
    <string name="instruktionerna">Här ska de komma fult med isntruktioner som ska lära alla små barn att dricka öl ute helvete
    och sen spy ner sig och sedan fortsätta dricka en helvetes massa öl</string>
    <string name="kortlek">Choose CardDeck</string>
    <string name="Edit">Edit</string>
    <string name="CreateDeck">Create Deck</string>
    <string name="choose">Välj ett alternativ</string>
    <string name="Next">Nästa</string>
    <string name="save">spara</string>

</resources>
