<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_choosedeck"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bakgrunddd"
    tools:context="com.example.hannes.beergame.choosedeckActivity">

    <TextView
        android:text="@string/kortlek"
        android:textSize="25dp"
        android:textColor="#fefefe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:id="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/choose"
        android:background="#fefefe"
        android:layout_marginTop="11dp"
        android:layout_marginLeft="8dip"
        android:layout_marginRight="8dip"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/play"
        android:layout_gravity="center"
        android:layout_width="190dp"
        android:layout_height="70dp"
        android:elevation="0dp"
        android:background="@drawable/main_button"
        android:id="@+id/button5"
        android:layout_marginBottom="138dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
