<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bakgrunddd"

    tools:context="com.example.hannes.beergame.MainActivity">

    <TextView
        android:text="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:gravity="center"
        android:textColorLink="?attr/colorPrimaryDark"
        android:textColor="#fafcf7"
        android:textSize="50sp"
        android:textStyle="normal|bold"
        tools:textStyle="normal|bold|italic"
        android:layout_weight="0.21"

        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:weightSum="1"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="49dp">




        <Button
            android:text="@string/play"
            android:layout_width="190dp"
            android:layout_height="70dp"

            android:id="@+id/button"
            android:elevation="0dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/main_button"
            android:layout_gravity="center"
            tools:textColor="@android:color/white"


            android:onClick=""
            />


        <Button
            android:text="@string/instructions"
            android:layout_width="190dp"
            android:layout_height="70dp"
            android:layout_below="@+id/button"
            android:layout_alignEnd="@+id/button"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            tools:textColor="@android:color/white"
            android:background="@drawable/main_button"

            android:id="@+id/button2"
            />

        <Button
            android:text="@string/customize"
            android:layout_width="190dp"
            android:layout_height="70dp"
            android:layout_below="@+id/button2"
            android:layout_alignStart="@+id/button"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            tools:textColor="@android:color/white"
            android:background="@drawable/main_button"

            android:id="@+id/button3"
            />
    </LinearLayout>
</RelativeLayout>
